add about me page

--- a/hugo.toml
+++ b/hugo.toml
@@ -9,6 +9,9 @@ paginate = 20
 
 disqusShortname = "yourdiscussshortname"
 
+[markup.goldmark.renderer]
+unsafe= true
+
 [markup.highlight]
 style = "github-dark"
 
@@ -63,7 +66,7 @@ url = "https://www.linkedin.com/in/ron-glozman-41724322b/"
   weight = 2
   url  = "posts/"
 [[menu.main]]
-  name = "About"
+  name = "About Me"
   weight = 3
   url = "about/"
   [[menu.main]]
